Display longer strings in tight elements. Fix page primary action spacing

--- a/shared/scss/components/ckan/actions.scss
+++ b/shared/scss/components/ckan/actions.scss
@@ -16,3 +16,7 @@
     }
   }
 }
+
+.page_primary_action {
+  margin-bottom: $margin-large-vertical;
+}
